disabled output textarea

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <button id="translate-btn">Translate</button>
     <h4>Your translated text is here</h4>
-    <textarea id="translate-text"></textarea>
+    <textarea id="translate-text" disabled></textarea>
 
 </div>
 </section>
